blog-miniProject/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas : 1
  selector :
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          # image: maitrikpatel/posts:0.0.1 
          # image: maitrikpatel/posts:0.0.5  --method 1 changing to config file to updating depolyment docker version
          # image: maitrikpatel/posts:latest or image: maitrikpatel/posts --method 2 use latest to config file to updating depolyment docker version
          image: maitrikpatel2025/posts:latest 

---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector :
      app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
